--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "aocf-boxes-2"
-version = "1.4.1"
-edition = "2018"
+version = "2.0.0"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 ansi_term = "0.12.1"
-clap = { version = "3.1.2", features = ["cargo"] }
-csv = "1.1.6"
-image = "0.23.14"
-imageproc = "0.22.0"
-serde = { version = "1.0.136", features = ["derive"] }
+clap = { version = "4.2.1", features = ["cargo"] }
+image = "0.24.6"
+imageproc = "0.23.0"
+ron = "0.8.0"
+serde = "1.0.159"
