--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ image = "0.24.6"
 imageproc = "0.23.0"
 ron = "0.8.0"
 serde = "1.0.164"
+serde_json = "1.0.107"
+serde_yaml = "0.9.25"
+toml = "0.8.0"
