--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,11 @@ edition = "2021"
 
 [dependencies]
 ansi_term = "0.12.1"
-clap = { version = "4.3.1", features = ["cargo"] }
-image = "0.24.6"
+clap = { version = "4.4.4", features = ["cargo"] }
+image = "0.24.7"
 imageproc = "0.23.0"
-ron = "0.8.0"
-serde = "1.0.164"
+ron = "0.8.1"
+serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.107"
 serde_yaml = "0.9.25"
 toml = "0.8.0"
